--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,13 +7,17 @@
 body {
     padding: 0;
     margin: 0;
+    font-family: "Open Sans", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #444;
 }
 
 
 /* Container */
 
 .container {
-    width: 100px;
+    width: 100%;
     max-width: 1160px;
     padding-left: 30px;
     padding-right: 30px;
